--- a/Powder/Powder.vcxproj
+++ b/Powder/Powder.vcxproj
@@ -125,9 +125,11 @@
   <ItemGroup>
     <ClCompile Include="Brush.cpp" />
     <ClCompile Include="CircleBrush.cpp" />
+    <ClCompile Include="Element.cpp" />
     <ClCompile Include="GOL.cpp" />
     <ClCompile Include="main.cpp" />
     <ClCompile Include="None_Element.cpp" />
+    <ClCompile Include="Sand.cpp" />
     <ClCompile Include="Simulation.cpp" />
     <ClCompile Include="SquareBrush.cpp" />
   </ItemGroup>
@@ -137,6 +139,7 @@
     <ClInclude Include="GOL.h" />
     <ClInclude Include="Element.h" />
     <ClInclude Include="None_Element.h" />
+    <ClInclude Include="Sand.h" />
     <ClInclude Include="Simulation.h" />
     <ClInclude Include="SquareBrush.h" />
   </ItemGroup>
