FIxed element transitions (Changed tick and create element functions in  simulation). Added ICE element.

--- a/Powder/Powder.vcxproj.filters
+++ b/Powder/Powder.vcxproj.filters
@@ -90,6 +90,9 @@
     <ClCompile Include="src\SimTool\Tools\CoolTool.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="src\Element\Elements\Ice.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="resource.h">
@@ -156,6 +159,9 @@
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="src\SimTool\Tools\CoolTool.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="src\Element\Elements\Ice.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
