--- a/Powder/Powder.vcxproj
+++ b/Powder/Powder.vcxproj
@@ -125,6 +125,7 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClCompile Include="src\Element\Elements\Ice.cpp" />
     <ClCompile Include="src\SimTool\Tools\CoolTool.cpp" />
     <ClCompile Include="src\SimTool\Tools\HeatTool.cpp" />
     <ClCompile Include="lib\imgui\imgui_stdlib.cpp" />
@@ -152,6 +153,7 @@
     <ClCompile Include="src\Element\Elements\Water.cpp" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="src\Element\Elements\Ice.h" />
     <ClInclude Include="src\SimTool\Tools\CoolTool.h" />
     <ClInclude Include="src\SimTool\Tools\HeatTool.h" />
     <ClInclude Include="lib\imgui\imgui_stdlib.h" />
